--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  
-  <h1>hello</h1>
-  
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center mt-5">To Do List</h1>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- END header  -->
+
+  <main>
+    <section id="user-input-area" class="w-50 mx-auto mt-3">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control form-control-lg" id="to-do-field" placeholder="write work" aria-label="write work" aria-describedby="basic-addon2">
+        <button class="input-group-text btn btn-secondary" id="add-btn">Add</button>
+      </div>
+    </section>
+
+    <section id="display-to-do-list-area" class="w-50 mx-auto mt-5 text-center">
+      <table class="table table-bordered table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Work</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+          
+        </tbody>
+      </table>
+    </section>
+
+    <section id="clear-all-area" class="w-50 mx-auto mt-5 text-center">
+      <button class="btn btn-warning">Clear All</button>
+    </section>
+  </main>
+  <!-- END main  -->  
+
   <script src="js/app.js"></script>
 </body>
 </html>
