done function done

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section id="clear-all-area" class="w-50 mx-auto mt-5 text-center">
-      <button class="btn btn-warning">Clear All</button>
+      <button class="btn btn-warning" id="clear-all-btn">Clear All</button>
     </section>
   </main>
   <!-- END main  -->  
